adds process_gasmet() to calculate fluxes with gasfluxes pkg directly.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,6 @@ export(calc_kW)
 export(day2sec)
 export(kH)
 export(preprocess_gasmet)
+export(process_gasmet)
 export(sec2day)
+importFrom(magrittr,"%>%")
