--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,8 @@ URL: https://github.com/tekknosol/tregata
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
-  ggplot2
+  ggplot2,
+    lubridate,
+    gasfluxes,
+    dplyr
 Suggests: testthat
