--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Description: The tregata package provides functions to convert high frequency co
 License: GPL-3
 Encoding: UTF-8
 URL: https://github.com/tekknosol/tregata
+BugReports: https://github.com/tekknosol/tregata/issues
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
