add routines to read GASMET and LosGatos files from disk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,8 @@ export(calc_kW)
 export(day2sec)
 export(kH)
 export(process_gasmet)
+export(process_losgatos)
+export(read_gasmet)
+export(read_losgatos)
 export(sec2day)
 importFrom(magrittr,"%>%")
