--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: tregata
 Type: Package
 Title: (Meta-)Package for the TregaTa project
 Version: 0.1.0.9000
-Author: Philipp Keller
-Maintainer: Philipp Keller <philipp.keller@ufz.de>
+Authors@R: person("Philipp", "Keller", email = "phlipp.keller@ufz.de",
+  role = c("aut", "cre"))
 Description: The tregata package provides functions to convert high frequency concentration data
     obtained by chamber measurements into gasfluxes. Data recorded with GASMET and LosGatos devices can be
     processed automatically.
