--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: person("Philipp", "Keller", email = "phlipp.keller@ufz.de",
 Description: The tregata package provides functions to convert high frequency concentration data
     obtained by chamber measurements into gasfluxes. Data recorded with GASMET and LosGatos devices can be
     processed automatically.
-License: GPL-3
+License: GPL-3 | file LICENSE
 Encoding: UTF-8
 URL: https://github.com/tekknosol/tregata
 BugReports: https://github.com/tekknosol/tregata/issues
