--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,15 @@ Package: tregata
 Type: Package
 Title: (Meta-)Package for the TregaTa project
 Version: 0.1.0.9000
-Authors@R: person("Philipp", "Keller", email = "phlipp.keller@ufz.de",
+Authors@R: person("Philipp S.", "Keller", email = "phlipp.keller@ufz.de",
   role = c("aut", "cre"))
 Description: The tregata package provides functions to convert high frequency concentration data
     obtained by chamber measurements into gasfluxes. Data recorded with GASMET and LosGatos devices can be
     processed automatically.
+Date: 2018
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
+Depends: R (>= 2.10)
 URL: https://github.com/tekknosol/tregata
 BugReports: https://github.com/tekknosol/tregata/issues
 LazyData: true
@@ -20,5 +22,6 @@ Imports:
     dplyr,
     magrittr,
     readr,
-    stringi
+    stringi,
+    stringr
 Suggests: testthat
