--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(axis.flux.gas)
 export(calc_SN)
 export(calc_kW)
 export(day2sec)
+export(inspect_gasmet)
+export(inspect_losgatos)
 export(kH)
 export(process_gasmet)
 export(process_losgatos)
