--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ export(axis.flux.ch4)
 export(axis.flux.co2)
 export(axis.flux.gas)
 export(calc_SN)
+export(calc_kH)
 export(calc_kW)
 export(day2sec)
 export(inspect_gasmet)
 export(inspect_losgatos)
-export(kH)
 export(process_gasmet)
 export(process_losgatos)
 export(read_gasmet)
