--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,13 @@ export(calc_kW)
 export(day2sec)
 export(inspect_gasmet)
 export(inspect_losgatos)
+export(process_chamber)
 export(process_gasmet)
+export(process_gasmet2)
 export(process_losgatos)
+export(process_losgatos2)
 export(read_gasmet)
 export(read_losgatos)
 export(sec2day)
+export(trim_time)
 importFrom(magrittr,"%>%")
