fix documentation errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,10 @@ export(inspect_gasmet)
 export(inspect_losgatos)
 export(process_chamber)
 export(process_gasmet)
-export(process_gasmet2)
 export(process_losgatos)
-export(process_losgatos2)
 export(read_gasmet)
 export(read_losgatos)
 export(sec2day)
 export(trim_time)
 importFrom(magrittr,"%>%")
+importFrom(rlang,":=")
