--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,4 +27,8 @@ Imports:
     tidyr,
     tibble,
     rlang
-Suggests: testthat
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
