--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Date: 2018
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
 Depends: R (>= 2.10)
-URL: https://github.com/tekknosol/glimmr
+URL: https://tekknosol.github.io/glimmr/, https://github.com/tekknosol/glimmr
 BugReports: https://github.com/tekknosol/glimmr/issues
 LazyData: true
 RoxygenNote: 6.0.1
