--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(calc_SN)
 export(calc_kH)
 export(calc_kW)
 export(day2sec)
+export(gals)
+export(gals_gasmet)
+export(gals_losgatos)
 export(inspect_gasmet)
 export(inspect_losgatos)
 export(process_chamber)
