Closes #14, Closes #15, Closes #17

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(gals_gasmet)
 export(gals_losgatos)
 export(inspect_gasmet)
 export(inspect_losgatos)
-export(is.gals)
 export(process_chamber)
 export(process_gasmet)
 export(process_losgatos)
@@ -23,3 +22,4 @@ export(sec2day)
 export(trim_time)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
+importFrom(rlang,.data)
