install mvtnorm version 1.0.8 on oldrel

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
   - linux
   - osx
 language: R
-sudo: false
+sudo: required
 cache: packages
 r:
   - oldrel
@@ -13,3 +13,8 @@ matrix:
   exclude:
     - os: osx
       r: devel
+  include:
+  - r: oldrel
+    before_cache:
+    - Rscript -e 'install_version("mvtnorm", version = "1.0-8", repos = "http://cran.us.r-project.org")'
+
