--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,12 @@ r:
 #  - oldrel
   - release
   - devel
+before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
+deploy:
+  provider: script
+  script: Rscript -e 'pkgdown::deploy_site_github(verbose = TRUE)'
+  skip_cleanup: true
 #matrix:
 #  exclude:
 #    - os: osx
 #      r: devel
-
-
