--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ RoxygenNote: 6.0.1.9000
 Imports:
     ggplot2,
     lubridate,
-    dplyr,
+    dplyr (>= 0.8.3),
     magrittr,
     readr,
     stringi,
