--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: glimmr
 Type: Package
 Title: Gas Fluxes and Dynamic Chamber Measurements
 Version: 0.1.0.9000
-Authors@R: person("Philipp S.", "Keller", email = "phlipp.keller@ufz.de",
+Authors@R: person("Philipp S.", "Keller", email = "philipp.keller@ufz.de",
   role = c("aut", "cre"), comment = c(ORCID = "0000-0002-3565-4413"))
-Description: provides functions to convert high frequency concentration data
-    obtained by chamber measurements into gasfluxes. Data recorded with GASMET
+Description: Provides functions to convert high frequency concentration data
+    obtained by chamber measurements into gas hfluxes. Data recorded with GASMET
     and LosGatos devices can be processed automatically. Furthermore, functions
     for flux calculation using BLE are included.
 Date: 2019-01-01
